--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Awesome Presentation</title>
+    <title>Binary Patching for Section Fuzzing</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -17,30 +17,13 @@
     </style>
   </head>
   <body>
-    <textarea id="source">
 
-class: center, middle
-
-# My Awesome Presentation
-
----
-
-# Agenda
-
-1. Introduction
-2. Deep-dive
-3. ...
-
-[NOTE]: Note that you need active internet connection to access remark.js script file
----
-
-# Introduction
-
-    </textarea>
-    <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
+    <script src="remark.js" type="text/javascript">
     </script>
     <script type="text/javascript">
-      var slideshow = remark.create();
+      var slideshow = remark.create({
+	    sourceUrl: 'presentation.md'
+	  });
     </script>
   </body>
 </html>
